--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -776,6 +776,8 @@
             <a href="bodyfatcalcualtor.html" class="calculator-btn">Body Fat Calculator (U.S. Navy Method)</a>
             <a href="baicalculator.html" class="calculator-btn">Body Adiposity Index (BAI) Calculator</a>
             <a href="bodyframesizecalcualtor.html" class="calculator-btn">Body Frame Size Calculator</a>
+            <a href="bsacalcualtor.html" class="calculator-btn">Body Surface Area (BSA) Calculator</a>
+
             <a href="bloodsugarconverter.html" class="calculator-btn">Blood Sugar Converter</a>
             <a href="cardiacindexcalculator.html" class="calculator-btn">Cardiac Index Calculator</a>
 
@@ -812,6 +814,7 @@
 
 
 
+            <a href="metabolicsyndromecalculator.html" class="calculator-btn">Metabolic Syndrome Calculator</a>
 
 
 
@@ -819,6 +822,8 @@
             
             <a href="proteinintakecalcualtor.html" class="calculator-btn">Protein Intake Calculator</a>
             <a href="ponderalindexcal.html" class="calculator-btn">Ponderal Index (PI) Calculator</a>
+            <a href="rfmcalcualtor.html" class="calculator-btn">Relative Fat Mass (RFM) Calculator</a>
+
             <a href="sleepcalculator.html" class="calculator-btn">Sleep Calculator</a>
 
 
