--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -771,6 +771,10 @@
             <a href="costperminute.html" class="calculator-btn">Cost Per Minute (CPM) Calculator </a>
             <a href="costofmaking.html" class="calculator-btn">Cost of Making (CM) Calculator </a>
             <a href="correctiveactioneffectivenesscal.html" class="calculator-btn">Corrective Action Effectiveness (CAE) Calculator</a>
+            <a href="criticalnumberofsamples.html" class="calculator-btn">Critical Number of Samples Calculator</a>
+            
+
+
 
 
 
@@ -780,6 +784,8 @@
 
 
             <a href="directionalsurvey.html" class="calculator-btn">Directional Survey Calculator</a>
+            <a href="dispersioncalculator.html" class="calculator-btn">Dispersion Calculator</a>
+
             <a href="evaporationfactorofaboilerfromitsfromandatrating.html" class="calculator-btn">Evaporation Factor Of A Boiler From Its 'From & At' Rating Calculator</a>
 
             <a href="electricalresidenceofaconductivityprobe.html" class="calculator-btn">Electrical Resistance Calculator For Conductivity Probe</a>
