changes in fire load and fire density

--- a/fireloadercal.html
+++ b/fireloadercal.html
@@ -302,6 +302,23 @@ strong{
         Additionally, the result is explained in relatable terms, like the energy equivalent of burning apples or cups of coffee, 
         to make the concept easier to grasp.
     </p>
+    
+    <h3>Fire Load vs. Fire Load Density – When to Use Which?</h3>
+    <p>
+        🔥 <strong>Fire Load (kJ):</strong> If you are assessing the total potential energy in a space without considering its size, 
+        fire load is used. This is common in cases where fire suppression systems are designed based on total energy storage.
+    </p>
+    <p>
+        📏 <strong>Fire Load Density (kJ/m²):</strong> When comparing fire risk across different-sized areas, fire load density is more useful. 
+        It standardizes the fire load per square meter, helping in fire safety classification, building regulations, and risk assessment.
+    </p>
+
+    <p>
+        🔍 **If you're unsure which one to use**:  
+        - Use **Fire Load** if you just want to know the total energy in the material.  
+        - Use **Fire Load Density** if you want to compare fire hazards across areas of different sizes.
+    </p>
+
     <p>
         Understanding fire load is crucial for assessing fire risks and planning fire protection measures. 
         Use this calculator to ensure safety and compliance with fire safety standards.
