--- a/firedensitycal.html
+++ b/firedensitycal.html
@@ -145,9 +145,9 @@
 }
 
 .note-container h3 {
-    margin-top: 0;
+    margin:15px 0;
     color: #007bff;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .note-container p {
