27-3-2025 15 new calculators added

--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -826,6 +826,7 @@
             <a href="secondaryfluidoutlettemperatureatanyload.html" class="calculator-btn">Secondary Fluid Outlet Temperature At Any Load Calculator</a>
             <a href="standardminutevalvesmv.html" class="calculator-btn">Standard Minute Value (SMV) Calculator</a>
             <a href="samplesizecalculator.html" class="calculator-btn">Sample Size Calculator</a>
+            <a href="heatgainfrominfrltrationsensibleheat.html" class="calculator-btn">Sensible Heat Gain from Infiltration Calculator</a>
 
 
 
